--- a/project_info.json
+++ b/project_info.json
@@ -1,8 +1,8 @@
 {
-	"name": "Github Projects",
+	"name": "Training and Project Management System",
 	"icon": "",
-	"desc": "This website is used to manage all social media at one place and list all github projects at one place.",
-	"tech": ["HTML", "CSS", "JavaScript", "jQuery", "BootStrap"],
+	"desc": "This is training and project management portal which is used to train students on particular technology which will give certificate of completion for the student and then allowed to do some projects. There is a module for the managers to bit for the projects from the Government.",
+	"tech": ["HTML", "CSS", "JavaScript", "jQuery", "BootStrap", "PHP", "MySQL"],
 
 	"from": "",
 	"to": ""
