--- a/project_info.json
+++ b/project_info.json
@@ -1,5 +1,6 @@
 {
 	"name": "Training and Project Management System",
+	"full_name": "dinesh99639/Training-and-Project-Management-System",
 	"icon": "",
 	"desc": "This portal which is used to train students on particular technology which will give certificate of completion for the student and then allowed to do some projects. There is a module for the managers to bid for the projects from the Government.",
 	"tech": ["HTML", "CSS", "JavaScript", "jQuery", "BootStrap", "PHP", "MySQL"],
